# peer-review-metrics

./: .all-contributorsrc  .gitignore  README.md  _quarto.yml  contributors.qmd  current-reviews-data.ipynb  environment.yml  functions.py  index.md  index.qmd  metrics.md  myst.yml  noxfile.py  pyOpenSci-peer-review-stats.ipynb  pyOpenSci-stats.md  requirements.txt
.circleci/: config.yml
.github/workflows/: deploy.yml  update-pr-data.yml
_data/: 2018_2023_all_issues_prs.csv  2024_all_issues_prs.csv  2025_all_issues_prs.csv  editorial_team_domains.csv  review_contribs.csv  review_presubmissions.csv  review_submissions.csv  sprint_data.csv
contributors/: contributors.qmd  sprints.qmd
metrics-theme/: LICENSE.txt  README.md
metrics-theme/src/pyosmetrics/: plot_theme.py
metrics/contributors/: contributor-pr-issues.ipynb
metrics/peer-review/: current-reviews-data.ipynb  historical-peer-review-stats.ipynb  review-timing.ipynb
peer-review/: current-peer-review.qmd  current-review-status.qmd  review-timing.qmd  review-trends.qmd  reviews-over-time.qmd
pyosmetrics_pkg/: LICENSE.txt  pyproject.toml
pyosmetrics_pkg/src/pyosmetrics/: __init__.py  functions.py  plot_theme.py
review-metrics/: pyOpenSci-peer-review-stats.ipynb
scripts/: get-prs.py  get-review-contributors.py  get-reviews.py  get-sprint-data.py  get_editors.py
styles/: styles.css
