[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyosmetrics"
version = "0.1"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Leah Wasser", email = "leah@pyopensci.org" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/metrics-theme#readme"
Issues = "https://github.com/unknown/metrics-theme/issues"
Source = "https://github.com/unknown/metrics-theme"

[tool.hatch.version]
path = "src/metrics_theme/__about__.py"
